--- a/css/style.css
+++ b/css/style.css
@@ -623,4 +623,69 @@
 .productos-iconos img {
     height: 100%;
     width: 100%;
+    filter: grayscale(0.4);
+}
+.whisky-lista {
+    height: 4rem;
+    margin: 1.5rem 5rem 0 5rem;
+    padding: 0.5rem;
+    font-size: 2.5rem;
+    font-family: 'Lato', sans-serif;
+    background-color: #212128;
+    color: #a28e58;
+    text-align: center;
+}
+#whisky {
+    display: grid;
+    grid-template-columns: 2fr 3fr 3fr 2fr;
+    gap: 0.5rem;
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+    color: #212128;
+    text-align: left;
+    background-image: url(../dealers-drinks-images/entramado.jpg);
+}
+#whisky img {
+    width: 100%;
+    margin-top: 3rem;
+    background-color: #212128;
+}
+#whisky h3 {
+    margin-right: 3rem ;
+    padding: 0.5rem;
+    font-family: 'Lato', sans-serif;
+    color: #a28e58;
+    font-weight: bold;
+}
+#whisky ul {
+    list-style-type: none;
+    margin: 1rem;
+}
+.gin-lista {
+    height: 4rem;
+    margin: 0 5rem 0 5rem;
+    padding: 0.5rem;
+    font-size: 2.5rem;
+    font-family: 'Lato', sans-serif;
+    background-color: #212128;
+    color: #a28e58;
+    text-align: center;
+}
+#gin {
+    margin: 1rem;
+    display: grid;
+    grid-template-columns: 2fr 3fr 3fr;
+    gap: 1rem;
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+    color: #212128;
+    text-align: left;
+    background-image: url(../dealers-drinks-images/entramado.jpg);
+}
+#gin img {
+    width: 100%;
+}
+#gin ul {
+    list-style-type: none;
+    margin-left: 5rem;
 }
