--- a/sass/main.css
+++ b/sass/main.css
@@ -832,26 +832,33 @@
 }
 
 /*inicio estilo fechas*/
+/*mixins*/
 .efemerides {
-  background-image: url(../dealers-drinks-images/entramado.jpg);
+  background-image: url(../dealers-drinks-images/fechas-encabezado.jpg);
   margin-top: 2rem;
-  height: 5rem;
+  height: 8rem;
+  -webkit-filter: opacity(80%);
+          filter: opacity(80%);
 }
 
 .efemerides h1 {
   font-family: 'Lato', sans-serif;
-  font-size: 1.5rem;
+  font-size: 2rem;
+  text-transform: uppercase;
   color: #212128;
   text-align: center;
+  padding: 1rem;
 }
 
 .efemerides p {
   font-family: 'Lato', sans-serif;
-  font-size: 1rem;
+  font-size: 1.5rem;
   color: #212128;
   text-align: center;
+  padding: 1rem;
 }
 
+/*map*/
 .fechas {
   background-image: url(../dealers-drinks-images/entramado.jpg);
   font-family: 'Lato', sans-serif;
@@ -878,5 +885,34 @@
   padding: 1rem;
   font-size: 1rem;
   color: #212128;
+}
+
+/*extend*/
+.piepag__fechas, .piepag__fechas h3 {
+  width: 100%;
+  overflow: hidden;
+}
+
+.piepag__fechas h3 {
+  color: #212128;
+  font-family: 'Lato', sans-serif;
+  font-size: 2rem;
+  -webkit-filter: opacity(70%);
+          filter: opacity(70%);
+}
+
+.piepag__fechas .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.piepag__fechas .container h3 {
+  padding-top: 5rem;
+  text-align: center;
 }
 /*# sourceMappingURL=main.css.map */
