se finalizan estilos de productos y efemerides

--- a/css/style.css
+++ b/css/style.css
@@ -599,6 +599,7 @@
     text-align: center;
 }
 #whisky {
+    padding-top: 0.25rem;
     display: grid;
     grid-template-columns: 2fr 3fr 3fr 2fr;
     gap: 0.5rem;
@@ -610,7 +611,6 @@
 }
 #whisky img {
     width: 100%;
-    margin-top: 3rem;
     background-color: #212128;
 }
 #whisky h3 {
@@ -646,9 +646,170 @@
     background-image: url(../dealers-drinks-images/entramado.jpg);
 }
 #gin img {
+    padding-top: 1rem;
     width: 100%;
 }
 #gin ul {
     list-style-type: none;
     margin-left: 5rem;
 }
+.vodka-lista {
+    height: 4rem;
+    margin: 0 5rem 0 5rem;
+    padding: 0.5rem;
+    font-size: 2.5rem;
+    font-family: 'Lato', sans-serif;
+    background-color: #212128;
+    color: #a28e58;
+    text-align: center;
+}
+#vodka {
+    margin: 1rem;
+    display: grid;
+    grid-template-columns: 2fr 3fr 3fr;
+    gap: 1rem;
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+    color: #212128;
+    text-align: left;
+    background-image: url(../dealers-drinks-images/entramado.jpg);
+}
+#vodka img {
+    padding-top: 0.5rem;
+    width: 100%;
+}
+#vodka ul {
+    list-style-type: none;
+    margin-left: 5rem;
+  }
+  #vodka ul li {
+      padding: 0.3rem;
+  }
+  .ron-lista {
+    height: 4rem;
+    margin: 0 5rem 0 5rem;
+    padding: 0.5rem;
+    font-size: 2.5rem;
+    font-family: 'Lato', sans-serif;
+    background-color: #212128;
+    color: #a28e58;
+    text-align: center;
+}
+#ron {
+    height: 30rem;
+    overflow: hidden;
+    margin: 1rem;
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    gap: 1rem;
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+    color: #212128;
+    text-align: left;
+    background-image: url(../dealers-drinks-images/entramado.jpg);
+}
+#ron img {
+    padding-top: 1rem;
+    width: 100%;
+}
+#ron ul {
+    padding-top: 8rem;
+    list-style-type: none;
+    margin-left: 5rem;
+}
+#ron ul li{
+    padding: 1rem;
+}
+.varios-lista {
+    height: 4rem;
+    margin: 0 5rem 0 5rem;
+    padding: 0.5rem;
+    font-size: 2.5rem;
+    font-family: 'Lato', sans-serif;
+    background-color: #212128;
+    color: #a28e58;
+    text-align: center;
+}
+#varios {
+    margin: 1rem;
+    display: grid;
+    grid-template-columns: 2fr 3fr 3fr;
+    gap: 1rem;
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+    color: #212128;
+    text-align: left;
+    background-image: url(../dealers-drinks-images/entramado.jpg);
+}
+#varios img {
+    padding-top: 0.5rem;
+    width: 100%;
+}
+#varios ul {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    list-style-type: none;
+    margin-left: 5rem;
+} 
+#varios ul li {
+    padding: 0.15rem;
+}
+
+
+/*Inicio estilos efemérides*/
+.efemerides {
+    background-image: url(../dealers-drinks-images/fechas-encabezado.jpg);
+    height: 8rem;
+    color: #212128;
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+}
+.efemerides h1 {
+    padding: 1rem;
+    font-size: 3rem;
+    text-transform: uppercase;
+}
+.efemerides p{
+    font-size: 1.5rem;
+    padding-bottom: 0.5rem;
+}
+.fechas {
+    font-family: 'Lato', sans-serif;
+    background-image: url(../dealers-drinks-images/entramado.jpg);
+    text-align: center;
+    padding-bottom: 2rem;
+}
+.fechas h2 {
+    height: 2.5rem;
+    font-size: 2rem;
+    color: #a28e58;
+    background-color: #212128;
+    text-align: center;
+    font-weight: bolder;
+}
+.fechas h3 {
+    padding: 0.5rem;
+    font-size: 1.5rem;
+}
+.fechas p{
+    padding-bottom: 0.5rem;
+    font-size: 1rem;
+    font-weight: bold;
+}
+.piepag__fechas .container{
+    height: 10rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-family: 'Lato', sans-serif;
+    align-items: center;
+    overflow: hidden;
+    background-color: #fde2d6;
+}
+.piepag__fechas .container h3 {
+    height: auto;
+    text-transform: uppercase;
+    color: #a28e58;
+    font-weight: bolder;
+}
+/*Inicio estilos efemérides*/
